# rutter

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.design/plans/: 2026-05-02-skill-accumulation-loop-rutter.zh-CN.md  PRD-rutter-skill-accumulation-loop-v0.1.md  PRD-rutter-skill-accumulation-loop-v0.1.zh-CN.md  PRD-rutter-skill-registry-v0.1.md  PRD-rutter-skill-registry-v0.1.zh-CN.md
registry/: index.yaml
registry/game-migration/v0.1/: game_migration_blocker.yaml  game_migration_core.yaml  game_migration_migrate.yaml  manifest.yaml
registry/game-migration/v0.2/: game_migration_migrate.yaml  game_migration_plan.yaml  game_migration_ui_layout_fidelity.yaml  game_migration_ui_product_sense.yaml  game_migration_unity_ui_recon.yaml  game_migration_verify.yaml  manifest.yaml
registry/portolan-integration/v0.1/: manifest.yaml  portolan_integration_hermes_bootstrap.yaml  portolan_integration_limenet_task_lifecycle.yaml  (+2 more)
skills/: game-migration-v0.1.md
skills/game-migration/: README.md  blocker.md  core.md  migrate.md  plan.md  ui-layout-fidelity.md  ui-product-sense.md  unity-ui-recon.md  verify.md
skills/portolan-integration/: README.md  hermes-bootstrap.md  limenet-task-lifecycle.md  quartermaster-review-contract.md  system-map.md
src/rutter/: __init__.py  adapter.py  cli.py  mcp_server.py  models.py  proposals.py  query.py  registry.py
src/rutter.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_adapter.py  test_contract_arbiter.py  test_mcp_server.py  test_proposals.py  test_registry.py
(+14 files in other folders)
