[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rutter"
version = "0.2.0"
description = "Git-backed skill registry and query CLI for meta-agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6,<7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]
mcp = [
    "mcp>=1.17,<2",
]

[project.scripts]
rutter = "rutter.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]